tests/linear/linear-non-004/expected
Example Non-Linearly Wired Circuits
Whole host of wires and ports are not used.
## Circuits
```
// LOG : Starting Linear NetList 
// LOG : Parsing Successful
../../shared/linear-non/UnusedThings.sv:24:0-0: Linearity Error:
s0n := (USED, FREE)
s1n := (USED, FREE)
y3 := (FREE, FREE)
y2 := (FREE, FREE)
y1 := (FREE, FREE)
y0 := (FREE, FREE)
i3 := FREE
i2 := FREE
i1 := FREE
i0 := FREE
out := FREE

```
## Verilator
```
%Warning-UNDRIVEN: ../../shared/linear-non/UnusedThings.sv:1:35: Signal is not driven: 'out'
                                                               : ... In instance UnusedThings
    1 | module UnusedThings( output logic out
      |                                   ^~~
                   ... For warning description see https://verilator.org/warn/UNDRIVEN?v=5.002
                   ... Use "/* verilator lint_off UNDRIVEN */" and lint_on around source to disable this message.
%Warning-UNUSEDSIGNAL: ../../shared/linear-non/UnusedThings.sv:2:30: Signal is not used: 'i0'
                                                                   : ... In instance UnusedThings
    2 |               , input  logic i0
      |                              ^~
%Warning-UNUSEDSIGNAL: ../../shared/linear-non/UnusedThings.sv:3:30: Signal is not used: 'i1'
                                                                   : ... In instance UnusedThings
    3 |               , input  logic i1
      |                              ^~
%Warning-UNUSEDSIGNAL: ../../shared/linear-non/UnusedThings.sv:4:30: Signal is not used: 'i2'
                                                                   : ... In instance UnusedThings
    4 |               , input  logic i2
      |                              ^~
%Warning-UNUSEDSIGNAL: ../../shared/linear-non/UnusedThings.sv:5:30: Signal is not used: 'i3'
                                                                   : ... In instance UnusedThings
    5 |               , input  logic i3
      |                              ^~
%Warning-UNUSEDSIGNAL: ../../shared/linear-non/UnusedThings.sv:10:15: Signal is not driven, nor used: 'y0'
                                                                    : ... In instance UnusedThings
   10 |    wire logic y0;
      |               ^~
%Warning-UNUSEDSIGNAL: ../../shared/linear-non/UnusedThings.sv:11:15: Signal is not driven, nor used: 'y1'
                                                                    : ... In instance UnusedThings
   11 |    wire logic y1;
      |               ^~
%Warning-UNUSEDSIGNAL: ../../shared/linear-non/UnusedThings.sv:12:15: Signal is not driven, nor used: 'y2'
                                                                    : ... In instance UnusedThings
   12 |    wire logic y2;
      |               ^~
%Warning-UNUSEDSIGNAL: ../../shared/linear-non/UnusedThings.sv:13:15: Signal is not driven, nor used: 'y3'
                                                                    : ... In instance UnusedThings
   13 |    wire logic y3;
      |               ^~
%Warning-UNUSEDSIGNAL: ../../shared/linear-non/UnusedThings.sv:14:15: Signal is not used: 's1n'
                                                                    : ... In instance UnusedThings
   14 |    wire logic s1n;
      |               ^~~
%Warning-UNUSEDSIGNAL: ../../shared/linear-non/UnusedThings.sv:15:15: Signal is not used: 's0n'
                                                                    : ... In instance UnusedThings
   15 |    wire logic s0n;
      |               ^~~
%Error: Exiting due to 11 warning(s)
```
